# FBReaderJ

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/geometerplus/zlibrary/ui/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/NativeFormats/: JavaNativeFormatPlugin.cpp
app/src/main/cpp/NativeFormats/fbreader/src/formats/doc/: OleStorage.cpp
app/src/main/cpp/NativeFormats/fbreader/src/formats/fb2/: FB2BookReader.cpp  FB2Reader.cpp  FB2Reader.h
app/src/main/cpp/NativeFormats/fbreader/src/formats/xhtml/: XHTMLReader.cpp  XHTMLTagInfo.h
app/src/main/cpp/NativeFormats/zlibrary/core/src/xml/expat/: ZLXMLReaderInternal.cpp
app/src/main/cpp/NativeFormats/zlibrary/text/src/fonts/: FontManager.cpp
app/src/main/cpp/NativeFormats/zlibrary/ui/src/android/filesystem/: JavaInputStream.cpp
app/src/main/cpp/expat-2.0.1/lib/: xmlparse.c
app/src/main/java/org/geometerplus/android/fbreader/: FBReader.java
app/src/main/java/org/geometerplus/android/fbreader/image/: ImageViewActivity.java
app/src/main/java/org/geometerplus/android/fbreader/network/: BookDownloaderService.java
app/src/main/java/org/geometerplus/zlibrary/ui/android/: MainActivity.java
app/src/main/java/org/geometerplus/zlibrary/ui/android/view/animation/: CurlAnimationProvider.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/org/geometerplus/zlibrary/ui/android/: ExampleUnitTest.java
reports/profile/: profile-2016-10-13-18-05-18.html  profile-2016-10-13-18-08-27.html  profile-2016-10-13-18-44-14.html
